move each section styling to it's own scss file, and font-family to typography.scss. Remove the scrollNavigation buttons as they are completely broken. Add prefers-reduced-motion to remove the floating animation for the ocean garbage

--- a/index.html
+++ b/index.html
@@ -14,14 +14,9 @@
         <script src="assets/scripts/section_1.js" defer></script>
         <script src="assets/scripts/section-4.js" defer></script>
         <script src="assets/scripts/section-5.js" defer></script>
-        <script src="assets/scripts/navigation_btns.js" defer></script>
     </head>
     <body>
-        <div class="scrollNavigation">
-            <button id="scroll-up-btn" title="Scroll up">⯅</button>
-            <button id="scroll-down-btn" title="Scroll down">⯆</button>
-        </div>
-        <section id="section-1-2" class="section-1-2">
+        <section class="section-1-2">
             <div class="section-1-2__surface">
                 <img
                     loading="lazy"
@@ -93,7 +88,7 @@
             </div>
         </section>
         <div class="container">
-            <section class="section-3">
+            <section class="section-3" id="section-3">
                 <div class="svg-container">
                     <img
                         id="floating-3"
@@ -173,7 +168,7 @@
                 </div>
             </section>
 
-            <section class="section-4">
+            <section class="section-4" id="section-4">
                 <div class="svg-container">
                     <img
                         id="floating-3"
