add animated clouds and sunshine effect, fix bug where certain images did not load in firefox due to lazy loading being above the src attribute, remove unused html code, improve alt text and add it to imgs that did not have it previously

--- a/index.html
+++ b/index.html
@@ -18,71 +18,83 @@
     <body>
         <section class="section-1-2">
             <div class="section-1-2__surface">
+                <img src="assets/svgs/environment/Sun.svg" alt="Sun" id="sun" />
                 <img
+                    id="cloud1"
+                    src="assets/svgs/environment/Cloud1.svg"
                     loading="lazy"
-                    src="assets/svgs/environment/Sun.svg"
-                    alt="Image of sun"
-                    id="sun"
+                    alt="Cloud"
+                />
+                <img
+                    id="cloud2"
+                    src="assets/svgs/environment/Cloud2.svg"
+                    loading="lazy"
+                    alt="Cloud"
+                />
+                <img
+                    id="cloud3"
+                    src="assets/svgs/environment/Cloud3.svg"
+                    loading="lazy"
+                    alt="Cloud"
                 />
                 <p class="section-1-2__text">
                     Every day around 8 million pieces of plastic makes their way
                     into our oceans.
                 </p>
                 <img
-                    loading="lazy"
                     src="assets/svgs/environment/FishingBoat.svg"
-                    alt="Image of fishing boat"
+                    loading="lazy"
+                    alt="Fishing boat"
                     id="boat"
                 />
             </div>
             <div class="section-1-2__ocean">
                 <img
-                    loading="lazy"
                     src="assets/svgs/trash/largeBottle.svg"
-                    alt="Image of large bottle"
+                    loading="lazy"
+                    alt="Large bottle"
                     id="largeBottle"
                 />
                 <img
-                    loading="lazy"
                     src="assets/svgs/trash/Microplastic.svg"
-                    alt="Image of microplastic"
+                    loading="lazy"
+                    alt="Microplastic"
                     id="microPlastic"
                 />
                 <img
-                    loading="lazy"
                     src="assets/svgs/trash/PlasticBag.svg"
-                    alt="Image of plastic bag"
+                    loading="lazy"
+                    alt="Plastic bag"
                     id="plasticBag"
                 />
-                <img loading="lazy" src="assets/svgs/trash/" alt="" id="" />
                 <img
-                    loading="lazy"
                     src="assets/svgs/trash/PlasticCup.svg"
-                    alt="Image of plastic cup"
+                    loading="lazy"
+                    alt="Plastic cup"
                     id="plasticCup"
                 />
                 <img
-                    loading="lazy"
                     src="assets/svgs/trash/plasticPiece.svg"
-                    alt="Image of plastic piece"
+                    loading="lazy"
+                    alt="Plastic piece"
                     id="plasticPiece"
                 />
                 <img
-                    loading="lazy"
                     src="assets/svgs/trash/plasticRings.svg"
-                    alt="Image of plastic rings"
+                    loading="lazy"
+                    alt="Plastic rings"
                     id="plasticRings"
                 />
                 <img
                     loading="lazy"
                     src="assets/svgs/trash/Sandal.svg"
-                    alt="Image of sandal"
+                    alt="Sandal"
                     id="sandal"
                 />
                 <img
-                    loading="lazy"
                     src="assets/svgs/trash/Tire.svg"
-                    alt="Image of tire"
+                    loading="lazy"
+                    alt="Tire"
                     id="tire"
                 />
             </div>
@@ -173,72 +185,92 @@
                     <img
                         id="floating-3"
                         src="assets/svgs/trash/PlasticCup.svg"
+                        loading="lazy"
                         alt="Plastic Cup"
                     />
                     <img
                         id="floating-2"
                         src="assets/svgs/trash/plasticRings.svg"
+                        loading="lazy"
                         alt="Plastic Rings"
                     />
                     <img
                         id="floating-3"
                         src="assets/svgs/trash/largeBottle.svg"
+                        loading="lazy"
                         alt="Large Bottle"
                     />
                     <img
                         id="floating-2"
                         src="assets/svgs/trash/Tire.svg"
+                        loading="lazy"
                         alt="Tire"
                     />
                     <img
                         id="floating-3"
                         src="assets/svgs/trash/PlasticBag.svg"
+                        loading="lazy"
                         alt="Plastic Bag"
                     />
                 </div>
 
                 <div class="microplastic" id="floating-3">
-                    <img src="assets/svgs/trash/Microplastic.svg" />
+                    <img
+                        src="assets/svgs/trash/Microplastic.svg"
+                        loading="lazy"
+                        alt="Microplastic"
+                    />
                 </div>
 
                 <div class="fish">
-                    <img src="assets/svgs/fishing/Fish.svg" />
+                    <img
+                        src="assets/svgs/fishing/Fish.svg"
+                        loading="lazy"
+                        alt="Fish"
+                    />
                 </div>
 
                 <div class="svg-container-2">
                     <img
                         id="floating"
                         src="assets/svgs/trash/PlasticBag.svg"
+                        loading="lazy"
                         alt="Plastic Bag"
                     />
                     <img
                         id="floating-2"
                         src="assets/svgs/trash/largeBottle.svg"
+                        loading="lazy"
                         alt="Large Bottle"
                     />
                     <img
                         id="floating-3"
                         src="assets/svgs/trash/Tire.svg"
+                        loading="lazy"
                         alt="Tire"
                     />
                     <img
                         id="floating-2"
                         src="assets/svgs/trash/Sandal.svg"
+                        loading="lazy"
                         alt="Sandal"
                     />
                     <img
                         id="floating"
                         src="assets/svgs/trash/largeBottle.svg"
+                        loading="lazy"
                         alt="Large Bottle"
                     />
                     <img
                         id="floating-3"
                         src="assets/svgs/trash/PlasticBag.svg"
+                        loading="lazy"
                         alt="Plastic Bag"
                     />
                     <img
                         id="floating"
                         src="assets/svgs/trash/PlasticCup.svg"
+                        loading="lazy"
                         alt="Plastic Cup"
                     />
                 </div>
@@ -254,14 +286,14 @@
             <section class="section" id="section-5">
                 <div class="hookFish">
                     <img
-                        loading="lazy"
                         src="assets/svgs/fishing/fishhook&worm.svg"
+                        loading="lazy"
                         alt="Fishing hook"
                         class="hookFish__fishHookWorm animateHookedFish"
                     />
                     <img
-                        loading="lazy"
                         src="assets/svgs/fishing/Fish.svg"
+                        loading="lazy"
                         alt="Fish"
                         class="hookFish__fish2 animateHookedFish"
                     />
@@ -273,27 +305,27 @@
             </section>
             <section class="section" id="section-6">
                 <img
-                    loading="lazy"
                     src="assets/svgs/fishing/cookedFish.svg"
+                    loading="lazy"
                     alt="Cooked fish"
                     class="section__cookedFish"
                 />
                 <div class="dinner">
                     <img
-                        loading="lazy"
                         src="assets/svgs/kitchen/Fork.svg"
+                        loading="lazy"
                         alt="Fork"
                         class="dinner__fork"
                     />
                     <img
-                        loading="lazy"
                         src="assets/svgs/kitchen/Plate.svg"
+                        loading="lazy"
                         alt="Dinner plate"
                         class="dinner__dinnerPlate"
                     />
                     <img
-                        loading="lazy"
                         src="assets/svgs/kitchen/Knife.svg"
+                        loading="lazy"
                         alt="Knife"
                         class="dinner__knife"
                     />
